--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "express-prettify": "^0.1.1",
     "json-server": "^0.15.1"
   }
 }
