--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "JSON server containing character data for MPQ tracker application",
   "main": "index.js",
   "scripts": {
+    "build": "next build",
     "start": "node ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,5 +14,8 @@
     "express": "^4.17.1",
     "express-prettify": "^0.1.1",
     "json-server": "^0.15.1"
+  },
+  "engines": {
+    "node": "10.16.3"
   }
 }
